[package]
name = "conflux"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Background file-sync service: daemon mode plus CLI control."

[[bin]]
name = "conflux"
path = "src/main.rs"

[features]
# Statically link a vendored OpenSSL (see conflux-core). Enabled for release
# binaries built in the cross-compilation containers.
vendored-openssl = ["conflux-core/vendored-openssl"]

[dependencies]
conflux-core = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
notify = { workspace = true }
notify-debouncer-full = { workspace = true }
